feat: fixing bugs on swagger
